# js80p

./: .gitattributes  .gitignore  BUILD.md  CMakeLists.txt
.devcontainer/: Dockerfile  compose.yaml
doc/: z-gui.md
gui/: mockup-new.html
scripts/: vst3_midi_mapping_probe.cpp
src/gui/: gui.cpp  gui.hpp  juce.cpp  juce.hpp
src/plugin/juce/: PluginEditor.cpp  PluginEditor.hpp  PluginProcessor.cpp  PluginProcessor.hpp  midi_ctl_parameter.hpp  vst3_midi_mapping.cpp  vst3_midi_mapping.hpp
src/ui/: control.cpp  control.hpp  curve_selector.cpp  curve_selector.hpp  dot_control.cpp  dot_control.hpp  effects_page.cpp  effects_page.hpp  env_scale_slider.cpp  env_scale_slider.hpp  filter_panel.cpp  filter_panel.hpp  filter_type_selector.cpp  filter_type_selector.hpp  harmonic_slider.cpp  harmonic_slider.hpp  knob.cpp  knob.hpp  macro_cell.cpp  macro_cell.hpp  macro_strip.cpp  macro_strip.hpp  mini_button.cpp  mini_button.hpp  mix_knob.cpp  mix_knob.hpp  modulation.hpp  modulation_manager.cpp  modulation_manager.hpp  modulator_allocator.hpp  modulator_card.cpp  modulator_card.hpp  new_gui.cpp  new_gui.hpp  param_bridge.hpp  param_labels.hpp  per_type_editor.cpp  per_type_editor.hpp  selector.cpp  selector.hpp  (+8 more)
